--- a/charts/loki-stack/values.yaml
+++ b/charts/loki-stack/values.yaml
@@ -1,17 +1,98 @@
-loki:
-  enabled: true
-  persistance:
-    enabled: true
-    size: 1Gi
-  
-promtail:
-  enabled: true
-
+filebeat:
+  enabled: false
+  filebeatConfig:
+    filebeat.yml: |
+      # logging.level: debug
+      filebeat.inputs:
+      - type: container
+        paths:
+          - /var/log/containers/*.log
+        processors:
+        - add_kubernetes_metadata:
+            host: ${NODE_NAME}
+            matchers:
+            - logs_path:
+                logs_path: "/var/log/containers/"
+      output.logstash:
+        hosts: ["logstash-loki:5044"]
+fluent-bit:
+  enabled: false
 grafana:
   enabled: true
+  image:
+    tag: 8.3.5
   sidecar:
     datasources:
       enabled: true
       maxLines: 1000
-  image:
-    tag: 8.2.2
+logstash:
+  enabled: false
+  filters:
+    main: |-
+      filter {
+        if [kubernetes] {
+          mutate {
+            add_field => {
+              "container_name" => "%{[kubernetes][container][name]}"
+              "namespace" => "%{[kubernetes][namespace]}"
+              "pod" => "%{[kubernetes][pod][name]}"
+            }
+            replace => { "host" => "%{[kubernetes][node][name]}"}
+          }
+        }
+        mutate {
+          remove_field => ["tags"]
+        }
+      }
+  image: grafana/logstash-output-loki
+  imageTag: 1.0.1
+  outputs:
+    main: |-
+      output {
+        loki {
+          url => "http://loki:3100/loki/api/v1/push"
+          #username => "test"
+          #password => "test"
+        }
+        # stdout { codec => rubydebug }
+      }
+loki:
+  datasource:
+    jsonData: {}
+    uid: ''
+  enabled: true
+  isDefault: true
+  livenessProbe:
+    httpGet:
+      path: /ready
+      port: http-metrics
+    initialDelaySeconds: 45
+  readinessProbe:
+    httpGet:
+      path: /ready
+      port: http-metrics
+    initialDelaySeconds: 45
+  url: 'http://{{(include "loki.serviceName" .)}}:{{ .Values.loki.service.port }}'
+prometheus:
+  datasource:
+    jsonData: {}
+  enabled: false
+  isDefault: false
+  url: >-
+    http://{{ include "prometheus.fullname" .}}:{{
+    .Values.prometheus.server.service.servicePort }}{{
+    .Values.prometheus.server.prefixURL }}
+promtail:
+  config:
+    clients:
+      - url: 'http://{{ .Release.Name }}:3100/loki/api/v1/push'
+    logLevel: info
+    serverPort: 3101
+  enabled: true
+proxy:
+  http_proxy: ''
+  https_proxy: ''
+  no_proxy: ''
+test_pod:
+  image: 'bats/bats:v1.1.0'
+  pullPolicy: IfNotPresent
